# Battleships

./: AbilityManager.cpp  CMakeLists.txt  DoubleDamage.cpp  DoubleDamage.h  GameController.h  GameException.h  GameExceptions.h  GameState.cpp  GameState.h  InputHandler.cpp  README.md  Render.h  Scanner.h  ability.h  field.cpp  ship.cpp
src/: AbilityManager.h  Bombing.cpp  Bombing.h  FileRaII.cpp  FileRaII.h  InputHandler.h  Render.cpp  Scanner.cpp  a.txt  enemy.cpp  enemy.h  field.h  game.cpp  game.h  main.cpp  manager.cpp  manager.h  player.cpp  player.h  ship.h
